Added requirement to run PolynomialGUI