@@ -11,3 +11,16 @@ Display results clearly.
 
 Technologies:
 Java, Object-Oriented Programming (OOP), Algebraic Computations
+
+Requirements
+- Java 11 or later (JDK)
+- [JavaFX SDK 22](https://gluonhq.com/products/javafx/)
+
+How to Run
+
+1. Download and unzip JavaFX SDK.
+2. Add all JARs in the `lib` folder to your project's libraries.
+3. When running, add VM options:
+--module-path "/path/to/javafx-sdk-22/lib" --add-modules javafx.controls,javafx.fxml
+
+Replace `/path/to/javafx-sdk-22/lib` with your real path.
